# nfc

./: .gitignore  CMakeLists.txt  README.md  hardcopy.0
lib/NfcLibrary/NdefLibrary/inc/: P2P_NDEF.h
lib/NfcLibrary/NdefLibrary/src/: P2P_NDEF.c
lib/NfcLibrary/NxpNci/inc/: NxpNci.h
lib/NfcLibrary/NxpNci/src/: NxpNci.c
lib/NfcLibrary/inc/: Nfc.h  Nfc_settings.h
scripts/: debug  debug-start  flash  serial
src/: CMakeLists.txt  main.c  tags  usb_descriptors.c  usb_msc.c
src/board/: CMakeLists.txt  board.c
src/board/include/: board.h
src/drivers/: CMakeLists.txt  gpio.c  i2c.c  tool.c
src/drivers/include/: driver_config.h  gpio.h  i2c.h  tool.h  types.h
src/freertos/include/: FreeRTOSConfig.h
src/gpio/: CMakeLists.txt  gpio.c  gpio.h
src/led/: CMakeLists.txt  led.c  led.h
src/mem/: .mem_helper.c.swp  CMakeLists.txt  mem_helper.c  mem_helper.h
src/nfcc/: CMakeLists.txt  NxpNci.c  NxpNci.h  P2P_NDEF.c  ndef_helper.c  ndef_message_setup.c  nfc_task.c  tml.c
src/nfcc/include/: Nfc.h  Nfc_settings.h  NxpNci.h  P2P_NDEF.h  driver.h  ndef_helper.h  ndef_message_setup.h  nfc_task.h  tml.h
src/test/: CMakeLists.txt  i2c_test.c
src/test/include/: test.h
src/usb/: CMakeLists.txt  tusb_config.h  usb_helper.c  usb_helper.h  usb_msc.c
src/usb/include/: tusb_config.h
